# edgi-cloud

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE.txt  README.md  Security Vulnerability Demonstration.docx  System Architecture.docx  System Specification.docx  config.py  config.toml  database_init.py  diagnostic.py  fix_paths.py  fly-staging.toml  fly.toml  fly.toml.example  generate_metadata.py  init_db.py  init_portal.sql  init_portal_db.sql  metadata.json  migrate_db.py  password_generator.py  portal.db  portal1.db  pyproject.toml  requirements.txt  run_init.py  secret_key.txt  setup_portal_db.py  setup_separate_databases.py
data/: portal.db
data12/: portal.db
infra/: fly.toml
plugins/: admin_panel.py  common_utils.py  create_database.py  datasette_admin_panel.py  datasette_builtin_csv_upload.py  datasette_csv_upload.py  datasette_delete_db.py  delete_db.py  generate_metadata.py  manage_databases.py  render_links.py  skip_csrf.py  upload_csv.py  upload_table.py  user_profile.py
script/: generate_admin_password.py  generate_secret_key.py
static/: app.css  styles.css
templates/: _messages.html  admin.html  admin_password_confirmation.html  all_databases.html  change_password.html  create_database.html  create_empty_database.html  create_homepage.html  create_import_database.html  dashboard.html  database_homepage.html  database_table.html  database_tables.html  datasette-upload-csvs.html  datasette_csv_upload_builtin.html  delete_db_confirm.html  delete_table_confirm.html  force_change_password.html  force_delete.html  index.html  (+20 more)
(+104 files in other folders)
