[project]
name = "edgi-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.2.0",
    "datasette-cluster-map>=0.18.2",
    "datasette==0.65.1",
    "gunicorn==22.0.0",
    "markupsafe==2.1.5",
    "datasette-render-markdown>=2.2.1",
    "datasette-template-sql>=1.0.2",
    "python-multipart>=0.0.20",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "psutil>=5.9.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "chardet>=5.1.0",
    "pillow>=9.0.0",
    "lxml>=4.6.0",
    "beautifulsoup4>=4.11.0",
    "validators>=0.20.0",
    "markdown>=3.4.0",
    "email-validator>=1.3.0",
    "python-dateutil>=2.8.0",
    "httpx>=0.28.1",
    "sqlite-utils>=3.38",
    "toml>=0.10.2",
    "pytest>=8.4.2",
]
